fix: increase colour contrast, add meta tag, & fix minor SEO & performance issues.

--- a/client/src/components/forms/styles/StartMenu.module.css
+++ b/client/src/components/forms/styles/StartMenu.module.css
@@ -1,5 +1,5 @@
 input:checked + .menu-label {
-  border: 2px solid rgb(14 165 233);
-  color: rgb(2 132 199);
+  border: 2px solid #0284c7;
+  color: #155e75;
   font-weight: 500;
 }
